# team-brain

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  blog-openspec.html  blog.html  mcp_server.py  pyproject.toml  roles.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: devin-acp-tap.md  devin-mcp.md  proposal-msgraph.md  setup-gitlab.md  team-brain.md  team-demo-setup.md  teams-setup.md
scripts/: smoke_test.py
teambrain/: __init__.py  assist.py  capture.py  code_summary.py  demo.py  embed.py  ingest_gitlab.py  init.py  log.py  reindex.py  store.py  synth_claude.py  synth_oidc.py  synth_openai.py  teams.py
teambrain/connectors/: __init__.py  _text.py  acp_tap.py  confluence.py  devin.py  gitlab.py  intellij.py  jira.py  openspec.py  pr.py
tests/: conftest.py  test_acp_tap.py  test_assist_bridge.py  test_capture.py  test_confluence.py  test_demo.py  test_devin.py  test_endpoints.py  test_gitlab.py  test_ingest_gitlab.py  test_init.py  test_intellij.py  test_jira.py  test_openspec.py  test_pr.py  test_relevance.py  test_synth_oidc.py  test_synth_openai.py  test_teams.py
