[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "team-brain"
version = "0.1.0"
description = "Role-aware org knowledge assistant built on memento's MemoryStorePG"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
# memento is the storage engine. Pulled from git so a plain `pip install` works
# on a fresh machine — no sibling checkout needed. (store.py still falls back to a
# ../memento sibling for local dev.) Postgres/embed extras stay opt-in below.
dependencies = ["devin-memento @ git+https://github.com/xerxes-y/memento.git"]

[project.optional-dependencies]
# Claude-backed synthesis (TEAMBRAIN_SYNTH=teambrain.synth_claude:synth).
# Connectors use only stdlib urllib, so they need no extra deps.
synth = ["anthropic>=0.40"]
# Postgres backend (MEMENTO_DB_URL=postgresql://...) — enables pgvector.
postgres = ["psycopg[binary]>=3"]
# Offline semantic embeddings (TEAMBRAIN_EMBED=local). The openai backend needs
# no extra deps (stdlib REST). pgvector needs a dense embedder; without one,
# search stays lexical.
embed-local = ["sentence-transformers>=2.2"]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/xerxes-y/team-brain"
Repository = "https://github.com/xerxes-y/team-brain"
Issues = "https://github.com/xerxes-y/team-brain/issues"
Documentation = "https://github.com/xerxes-y/team-brain/blob/main/docs/team-brain.md"

[project.scripts]
team-brain = "mcp_server:main"
team-brain-reindex = "teambrain.reindex:main"
team-brain-gitlab = "teambrain.ingest_gitlab:main"

[tool.setuptools]
py-modules = ["mcp_server"]
packages = ["teambrain", "teambrain.connectors"]
